--- a/chap3.tex
+++ b/chap3.tex
@@ -470,7 +470,8 @@ for the well-being of the equipment. The same issues play out with
 robotic vehicles for underwater exploration. The most famous of these,
 Alvin and Jason, deeply involve human scientists as operators in real
 time, either directly from within the vehicle or through a tethered
-link.\cite{???} Most AUVs (or Autonomous Underwater Vehicles) are not
+link \cite{NOAA1} \cite{NOAA2}. Most AUVs (or Autonomous Underwater
+Vehicles) are not 
 truly autonomous, but are operated remotely using low-bandwidth data
 links via acoustic communications.\footnote{David Mindell, discussion
   with the author, September 3, 2014} This is largely an issue of risk
@@ -522,13 +523,20 @@ higher-levels of automation will not, and will not be expected to,
 monitor its operation. An often-used justification
 for entirely eliminating the human from the vehicle control loop is
 related to this tendency not to monitor the automation system:
-research shows that human operators who become reliant on the
+experience shows that human operators who become reliant on the
 automation to perform a task are ill-equipped to take that task back
 in a crisis situation, and task hand-over is likely to be
-catastrophic.\cite{???} A transportation systems researcher I spoke to
+catastrophic \cite{447} \cite{Chowpaper}. A transportation systems
+researcher I spoke to 
 even cited this as the key reason he felt that highway-only
 self-driving systems would not work, and that companies would have to
-design for full automation everywhere.
+design for full automation everywhere.\footnote{Some researchers,
+  however, do suggest the opposite: Larsson suggests a less perfect
+  system might be better 
+  by some metrics, as experience with it is empirically related to
+  greater awareness of its weaknesses, and an expectation of having to
+take control intermittently \cite{larsson}. Notably, this paper and
+others like it are representative of human factors or ergonomics research.}
 
 \subsection{Aircraft Automation}
 
@@ -544,7 +552,8 @@ leveraged by pilots to increase their agency, similarly to how
 geologists use the automated capabilities of the Mars rovers to
 increase theirs. Autopilots are also complex systems, with many modes
 that require deep technical knowledge and training to use
-appropriately\cite{???}---and which, when poorly designed from a human factors
+appropriately\cite{harrisPsych}---and which, when poorly designed from
+a human factors 
 angle, as they have often been, can behave in ways that are unexpected
 by and antithetical to the wishes of the pilots. Stories of crashes
 due to autopilot mode confusion abound, but one of the most important
@@ -555,10 +564,13 @@ report, published in 2012, identifies the cause of the accident as a
 failed hand-over of control from the autopilot system to the pilots:
 when the autopilot system shut down due to a failure of its airspeed
 indicators, the pilots were not prepared to so suddenly resume the
-task of flying a large airliner in poor conditions.\cite{BEA}
+task of flying a large airliner in poor conditions.\cite{AF447}
 Seemingly confused by the situation they were in, the pilot and
 co-pilot provided contradictory control inputs to the aircraft and
 stalled the plane, causing it to crash. 
+
+%cite removed
+%airflow required electronic solutions\cite[p. 33]{DM}
 
 This crash brings a number of human supervisory control questions to
 the fore. What is the proper role of pilots? And how quickly can they
@@ -576,7 +588,7 @@ aircraft ``fly itself'' in a given orientation or does it require
 constant control inputs to maintain course---goes back as far as the
 Wright Flyer, as do the competing professional identities that
 accompany them: are you simply a chauffeur, or a ``true
-airman''\cite[p. 21]{???-DM}? The Wright's focus on the operator's
+airman''\cite[p. 21]{DM}? The Wright's focus on the operator's
 skill\footnote{The navigation of human and automated capabilities in
   high-performance racing also deserves proper investigation. But I suspect
 similar issues play out in this arena: modern racing cars depend on
@@ -586,17 +598,17 @@ rules that disallow certain technologies:  ABS and traction control are
 banned from Formula 1 racing, for example.} created the unique profession of the
 ``pilot,'' and unstable aircraft were the standard for years, until
 human fatigue over long periods of flight changed the importance of
-stability to aircraft operation\cite[p. 22-24]{???-DM}. Stability,
+stability to aircraft operation\cite[p. 22-24]{DM}. Stability,
 this subsequent virtue of a well-engineered airframe had to be again
 renegotiated in the context of supersonic flight, where stability
 problems related to supersonic airflow required electronic
-solutions\cite[p. 33]{???-DM}. But there was deep concern among the
+solutions. But there was deep concern among the
 flying community about black boxes that are out of the pilot's
 control, and some saw these devices as ``band-aids'' for engineers not
-``skilled'' enough to make the aircraft stable\cite[p. 35]{???-DM}. J.
+``skilled'' enough to make the aircraft stable:  J.
 O. Roberts' ``The Case Against Automation in Manned Fighter Aircraft''
 argued for more emphasis on displaying information to pilots, rather
-than using automation to assume control\cite[p. 35]{???-DM}.
+than using automation to assume control \cite[p. 35]{DM}.
 Nevertheless, cockpit automation has continued to increase. Today,
 many airlines 
 have guidelines that require automation systems to be used
