--- a/main.bib
+++ b/main.bib
@@ -1383,6 +1383,63 @@
    year = "2014",
 }
 
+@ARTICLE{NOAA1,
+   author = "{National Oceanic and Atmospheric Administration}",
+   title = "{A}lvin",
+   journal = "NOAA Website",
+   note = "http://oceanexplorer.noaa.gov/technology/subs/alvin/alvin.html",
+}
+
+@ARTICLE{NOAA2,
+   author = "{National Oceanic and Atmospheric Administration}",
+   title = "{J}ason",
+   journal = "NOAA Website",
+   note = "http://oceanexplorer.noaa.gov/technology/subs/jason/jason.html",
+}
+
+@ARTICLE{larsson,
+   author = "Annika F. L. Larsson",
+   title = "{D}river usage and understanding of adaptive cruise control",
+   journal = "Applied Ergonomics",
+   month = "May",
+   year = 2012,
+   volume = 43,
+   number = 3,
+   pages = "501--506",
+}
+
+@TECHREPORT{AF447,
+   author = "{Bureau d'Enquetes et d'Analyses}",
+   title = "Final report on the accident on 1st {J}une 2009 to the {A}irbus {A}330-203 registered {F-GZCP} operated by {A}ir {F}rance flight {AF}-447 {R}io de {J}aniero -- Paris",
+   type = "BEA Crash Report",
+   month = "June",
+   year = "2012",
+   note = "English Edition",
+}
+
+@ARTICLE{Chowpaper,
+   author = "Stephanie Chow and Stephen Yortsos and Najmedin Meshkati",
+   title = "Asiana Airlines Flight 214: Investigating Cockpit Automation and Culture Issues in Aviation Safety",
+   journal = "Aviation Psychology and Applied Human Factors",
+   year = 2014,
+   volume = 4,
+   number = 2,
+   pages = "113--121",
+}
+
+@ARTICLE{harrisPsych,
+   author = "Don Harris",
+   title = "Improving aircraft safety",
+   journal = "Psychologist",
+   year = 2014,
+   month = "February",
+   volume = 27,
+   number = 2,
+   pages = "90--94",
+}
+
+
+
 
 
 
