more cites added

--- a/chap3.tex
+++ b/chap3.tex
@@ -612,7 +612,7 @@ than using automation to assume control \cite[p. 35]{DM}.
 Nevertheless, cockpit automation has continued to increase. Today,
 many airlines 
 have guidelines that require automation systems to be used
-whenever possible\cite{???}. This parallels some developments
+whenever possible \cite[p. 38]{PARCCAST}. This parallels some developments
 in the automotive space: deep controversies exist among automotive
 enthusiasts about the proper roles of all-wheel-drive, traction
 control, and automatic transmissions in the driving process. Even ABS,
@@ -621,9 +621,14 @@ performance, is in some senses controversial; this skepticism is
 motivated by the idea that 
 a professional driver utilizing fully manual ``threshold braking,''
 developed through deep experience and human skill, can outperform the
-computerized system\cite{???}. New performance vehicles---like the
+computerized system.\footnote{There are innumerable forum posts on
+  this topic scattered around automotive forums, and arguments over
+  physical principles and the capabilities of the technology in
+  different road conditions are
+  intertwined with issues of masculinity and implicit driving skill.}
+New performance vehicles---like the 
 highly-computerized Nissan GT-R, with a plethora of all-wheel-drive
-systems---are criticized by some as ``too easy'' to drive quickly\cite{???}.
+systems---are criticized by some as ``too easy to drive quickly'' \cite{edmunds}.
 An overly-computerized vehicle is to some soulless, unexciting, too much like
 a video game: these vehicles may derisively be said to be for the
 PlayStation generation, even while others argue for the superior
@@ -633,21 +638,23 @@ drivers,\footnote{This community has stumbled upon the point of
   identity, perhaps without even realizing it. Rather than holding the
 machine or the human as prime, the human gains through their
 interaction with the technology.}
-turning an average driver into a hero or track-star\cite{???}.
+turning an average driver into a hero or track-star.
+
+% can cite http://www.ctvnews.ca/autos/nissan-s-new-gt-r-model-for-2014-is-this-a-supercar-for-the-playstation-generation-1.1550159
 
 Computerized aids are sites of contradictory feelings and pressures.
 Cruise control, when first introduced commercially as Chrysler's ``Auto-Pilot,''
 was described as ``faintly
 ominious'' by \emph{Popular Science}, but nevertheless seemed like a
 ``genuine help'' for reducing
-fatigue\cite{???http://www.brookings.edu/research/papers/2014/04/products-liability-driverless-cars-villasenor}.
+fatigue \cite{rowsomePopsci}.
 It is well enshrined within legal principles that drivers using
 cruise control and even automated driver aids are legally responsible
 for controlling their vehicles at all times, and yet these same aids
 may reduce attention and ability to react in an emergency
 situation---the other side of reducing fatigue.
 Traction and stability control are now required for all cars in the US
-market,\cite{???-brookings} while drivers' identities still modulate the
+market,\cite{brookingsLiability} while drivers' identities still modulate the
 extent to which such
 advancements are seen as valuable, or how often the features get
 turned off in day-to-day use. 
@@ -664,19 +671,20 @@ be sufficiently safe. The risks of a hand-over of control at high
 speed would negate, by this reasoning, the benefits of computer
 control on the highway. But aircraft companies seem to be learning a
 different lesson from the same incidents. Boeing and Airbus, the two
-most prominent manufacturers of commercial airliners, are stepping
-back from complete automation, while increasing the computerization of
+most prominent manufacturers of commercial airliners, are distancing
+themselves from complete automation, while increasing the computerization of
 their cockpits through digital displays and tools to assist pilots in
-the task of flying\cite{???}. The focus is on adaptive or adaptible automation
+the task of flying \cite{787dream} \cite{brownFuture}. The focus for
+future development is on adaptive or adaptible automation
 rather than complete computer control. Both types of systems allow for
 balancing the operator's load---adaptive systems automatically,
 adaptible systems by operator request---taking on tasks during
 high-stress, busy situations, but handing back tasks during periods of
 limited load in order to keep the operator informed of and engaged in
-the operation of the system\cite{???}. Such systems have their own
+the operation of the system \cite{dahai}. Such systems have their own
 engineering challenges, but represent a very different answer to the
 question ``what should the role of pilots be?'' than does the further
-complete automation of aircraft operations. Sustained human engagement
+complete automation of aircraft operations \cite{kaber}. Sustained human engagement
 with highly-automated systems is possible, but has to be designed into
 the system from the beginning. Asking people to be mere machine
 tenders, present only to ensure the continued operation of the
@@ -697,7 +705,7 @@ operation will look like from a ``driver's'' or operator's point of view.
 No current ``self-driving'' vehicles designed to operate on public
 roadways (as opposed to in controlled conditions) operate in a fully
 autonomous mode. The cars operate---and legally, can only
-operate\cite{???}---in
+operate---in
 a supervised mode, wherein a human driver is responsible for
 overseeing the automated systems. Even if the vehicle is capable of
 performing a maneuver ``on its own,'' that operation is monitored, at
@@ -712,7 +720,7 @@ the self-driving car team in Mountain View. The ideal operator will
 develop ``a unique set of operational skills'' using the vehicles, and
 operate ``comfortably in a fast-paced environment, sometimes managing
 up to four communication channels simultaneously via various high- and
-low-tech mediums.''\cite{???-googleJobPosting} This person's primary
+low-tech mediums.''\cite{googleJobPosting} This person's primary
 duties include filing daily reports and monitoring operations of the
 software with ``constant focus.''\footnote{While this constant focus
   is likely to be solely an artifact of the car as a device still in
@@ -732,7 +740,7 @@ emergency. The test driver is instead an active participant in the
 complex process of 
 vehicle operation. Further details of these drives, however,
 are difficult to come by. Test drivers are, expectedly, required to
-``keep all project details confidential.''\cite{???-googleJobPosting}
+``keep all project details confidential.''\cite{googleJobPosting}
 
 %%Use the Hireart job posting; looking for people who can monitor
 %%comms and vehicle ops; a complex task; but the actual operations
@@ -744,7 +752,7 @@ roads, in the only government test yet conducted in the United States.
 The documentation of this test---which occurred with engineers Chris
 Urmson (the project lead) and Anthony Levandowski in the front
 seats---exposes fractures in the traditional perspectives on vehicle
-automation.\cite{harrisNevada} Even though the structure of the
+automation \cite{harrisNevada}. Even though the structure of the
 checklist only breaks down operation into ``Autonomous,'' ``Driver
 Assist,'' and ``Driver Only'' modes, it shows that the human driver
 was required to assist, or to take control, at multiple points during
@@ -754,7 +762,7 @@ switching into manual mode and requiring human assistance to continue.
 These hand-overs were not limited to construction, however: 
 ``Wojcik [the examiner] also recorded that the car needed driver
 assistance with some turns, although she did not note the
-circumstances.''\cite{harrisNevada} This should not be taken
+circumstances'' \cite{harrisNevada}. This should not be taken
 simplistically, as evidence that the system is not sufficiently
 advanced. Instead, it is evidence that real operations are more
 nuanced than narratives of them tend to allow for, involving mixes of
@@ -780,7 +788,7 @@ Sheridan's \emph{Telerobotics, Automation, and Human Supervisory
 at the MIT Man-Machine Systems Laboratory---among other places---for
 the previous 30 years, this book represents the first time many of the
 concepts that were ``maturing'' over those years of dissertations were
-brought together into one source.\cite[p. xix]{sheridan} Despite its
+brought together into one source \cite[p. xix]{sheridan}. Despite its
 age, the book remains a great introduction to the field as well as a
 much-needed counterpoint to other tendencies in the field of
 automation.\footnote{And in fact, Sheridan is almost prescient in his
