--- a/main.bib
+++ b/main.bib
@@ -1438,7 +1438,78 @@
    pages = "90--94",
 }
 
+@ARTICLE{edmunds,
+   key = "Nissan GT-R Review",
+   author = "",
+   title = "Nissan GT-R Review",
+   journal = "Edmunds",
+   year = "Accessed April 16, 2015",
+   note = "http://www.edmunds.com/nissan/gt-r/",
+}
 
+@ARTICLE{rowsomePopsci,
+   author = "Frank Rowsome Jr.",
+   title = "1958 Imperial: What It's Like To Drive An Auto-Pilot Car",
+   journal = "Popular Science",
+   month = "April",
+   year = "1958",
+   note = "Available at http://www.imperialclub.com/~imperialclub/Articles/58AutoPilot/index.htm",
+}
+
+@ARTICLE{brookingsLiability,
+   author = "John Villasenor",
+   title = "Products Liability and Driverless Cars: Issues and Guiding Principles for Legislation",
+   journal = "Brookings Institute",
+   month = "April 24",
+   year = "2014",
+   note = "http://www.brookings.edu/research/papers/2014/04/products-liability-driverless-cars-villasenor",
+}
+
+@ARTICLE{787dream,
+   key = "787 Dreamliner vs. A380: cockpit comparisons"
+   author = "",
+   title = "787 Dreamliner vs. A380: cockpit comparisons",
+   journal = "Aerospace Technology",
+   month = "March 14",
+   year = "2012",
+   note = "http://www.aerospace-technology.com/features/featuredreamliner-vs-a380-cockpit-comparisons",
+}
+
+@ARTICLE{brownFuture,
+   author = "David Parker Brown",
+   title = "Will the Cockpit of the Future Have Less Pilot Interaction?",
+   journal = "Aol Travel",
+   month = "March 18",
+   year = "2011",
+   note = "http://news.travel.aol.com/2011/03/18/will-the-cockpit-of-the-future-have-less-pilot-interaction/",
+}
+
+@ARTICLE{dahai,
+   author = "Dahai Liu and Sean L. Guarino and Emilie Roth and Karen Harper and Dennis Vincenzi",
+   title = "Effect of Novel Adaptive Displays on Pilot Performance and Workload",
+   journal = "International Journal of Aviation Psychology",
+   year = "2012",
+   volume = "22",
+   number = "3",
+   pages = "242--265", 
+}
+
+@ARTICLE{kaber,
+   author = "David B. Kaber and Jennifer M. Riley and Kheng-Wooi Tan and Mica R. Endsley",
+   title = "On the Design of Adaptive Automation for Complex Systems",
+   journal = "International Journal of Cognitive Ergonomics",
+   year = "2001",
+   volume = "5",
+   number = "1",
+   pages = "37--57",
+}
+
+@UNPUBLISHED{googleJobPosting,
+   key = "Self-Driving Vehicle Operator / Operations Associate",
+   author = "",
+   title = "Self-Driving Vehicle Operator / Operations Associate",
+   note = "HireArt Job Posting: https://www.hireart.com/jobs/6ba4ebe8/apply?",
+}
 
 
 
